# rust-practice-projects

./: LICENSE  README.md
daily_activity/: .env.example  Cargo.toml  README.md
daily_activity/src/: github.rs  jira.rs  main.rs
daily_activity/src/structs/: github.rs  jira.rs
file_organizer/: Cargo.toml  README.md
file_organizer/src/: main.rs
file_organizer/src/traits/: print_format.rs
guessing_game/: README.md
guessing_game/src/: main.rs
hello_cargo/: README.md
hello_world/: README.md
src/structs/: config.rs  mod.rs
src/traits/: str_ext.rs
